# wolfronix_go

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum
cmd/api/: main.go
internal/config/: config.go
internal/handlers/: engine.go
internal/masking/: masking.go
wolfronix_go-main/: .dockerignore  .env.example  .gitignore  COMPLETE_WORKFLOW.md  Dockerfile  WOLFRONIX_GUIDE.md  docker-compose.yml  entrypoint.sh  go.mod  go.sum
wolfronix_go-main/Wolfronix_saas/: CONTACT_FORM_IMPLEMENTATION_SUMMARY.md  CONTACT_FORM_SETUP.md  test_contact_form.js  test_contact_form.mjs
wolfronix_go-main/Wolfronix_saas/backend/: .env.example  migration_log.txt  package-lock.json  package.json  test-integration.js
wolfronix_go-main/Wolfronix_saas/frontend/: api.html  app.js  auth-callback.html  auth.js  dashboard.html  dashboard.js  demo.html  docs.html  download.html  (+9 more)
wolfronix_go-main/connectors/: README.md
wolfronix_go-main/deploy/: .env.example  DEPLOYMENT.md  deploy.sh  docker-compose.prod.yml  mock_client_api.py  test_enterprise.sh  wolfronix.service
wolfronix_go-main/docs/: ENTERPRISE_INTEGRATION_GUIDE.md
wolfronix_go-main/migrations/: 001_wolfronix_v1.sql
wolfronix_go-main/scripts/: seed_test_client.go
wolfronix_go-main/sdk/python/: LICENSE  README.md  pyproject.toml
wolfronix_go-main/sdk/python/tests/: test_client.py  test_crypto.py
wolfronix_go-main/sdk/python/wolfronix/: __init__.py  admin.py  client.py  crypto.py  errors.py  types.py
wolfronix_go-main/sdk/python/wolfronix_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
wolfronix_go-main/test/: sample_data.txt  test_wolfronix.go
wolfronix_go-main/test_app/: app.js  index.html  package-lock.json  package.json  server.js  styles.css  wolfronix.browser.js
(+78 files in other folders)
