[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wolfronix-sdk"
version = "1.0.0"
description = "Official Wolfronix SDK for Python — Zero-knowledge encryption made simple"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Wolfronix Team"},
]
keywords = [
    "wolfronix",
    "encryption",
    "security",
    "zero-knowledge",
    "aes-256",
    "file-encryption",
    "crypto",
    "privacy",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
websocket = ["websockets>=12.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
    "websockets>=12.0",
]

[project.urls]
Homepage = "https://wolfronix.com"
Documentation = "https://wolfronix.com/docs/sdk/python"
Repository = "https://github.com/wolfronix/sdk-python"
Issues = "https://github.com/wolfronix/sdk-python/issues"

[tool.setuptools.packages.find]
include = ["wolfronix*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
